--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Nicolas Morais
 description: Developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/nicmorais/nicmorais.github.io/master/images/profilepic.png
 
 #
 # Flags below are optional
